--- a/UserFeedback/user_selected_Classifier.ipynb
+++ b/UserFeedback/user_selected_Classifier.ipynb
@@ -97,10 +97,10 @@
     "# Simulated user input\n",
     "user_selected_counts = {\n",
     "    'Crow': 3,\n",
-    "    'Large-billed Crow': 0 # <-- case where user only selects None\n",
+    "    'Large-billed Crow': 0 \n",
     "}\n",
     "\n",
-    "# Check if 'None' is the *only* selection\n",
+ 
     "if list(user_selected_counts.keys()) == ['None']:\n",
     "    print(\"❌ No bird in dataset. Skipping prediction and Bayesian update.\")\n",
     "else:\n",
